[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/start_menu/start_menu.gd" type="Script" id=1]
[ext_resource path="res://src/start_menu/Start_menu_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://DefaultFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sprites/Scene/castle.jpg" type="Texture" id=4]
[ext_resource path="res://src/start_menu/Controls.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="DynamicFont" id=4]
size = 40
outline_color = Color( 0.105882, 0.105882, 0.105882, 1 )
font_data = ExtResource( 6 )

[node name="start_menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="start_button" type="Button" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1419.0
margin_top = -12.0
margin_right = -1358.0
margin_bottom = 22.0
rect_scale = Vector2( 6, 6 )
text = "Start"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.083
anchor_right = 0.5
anchor_bottom = 0.083
margin_left = -193.0
margin_top = 50.96
margin_right = 155.0
margin_bottom = 100.96
custom_colors/font_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
custom_fonts/font = SubResource( 4 )
text = "ПАУК && !ПРОТИВ"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -245.5
margin_right = -90.5
margin_bottom = 48.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.682353, 0.0470588, 0.0470588, 1 )
custom_fonts/font = SubResource( 4 )
text = "HUNTED"
align = 1
valign = 1

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="ControlsButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -160.0
margin_right = -70.0
margin_bottom = -45.0
custom_fonts/font = ExtResource( 3 )
text = "Управление"

[node name="Controls" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="button_down" from="ControlsButton" to="." method="_on_Button_button_down"]
